--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,10 @@
 @import '_reset';
 @import '_variables';
+@import '@fontsource/ubuntu-mono';
 
 body {
+  font-family: var(--font-family);
+  
   color: var(--foreground-color);
   background-color: var(--background-color);
   background-image: radial-gradient(#636363 0.4px, transparent 0.4px), radial-gradient(#656565 0.4px, #000000 0.4px);
