--- a/components/molecules/Pagination/Pagination.module.scss
+++ b/components/molecules/Pagination/Pagination.module.scss
@@ -7,12 +7,13 @@
 }
 
 .list {
-  display: flex;
+  padding: 0;
   list-style: none;
+  display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0;
   gap: 8px;
+  flex-wrap: wrap;
 }
 
 .caption {
