--- a/components/molecules/Table/Table.module.scss
+++ b/components/molecules/Table/Table.module.scss
@@ -1,14 +1,21 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 40px;
+  justify-content: center;  
   padding: 10px 20px;
+  overflow: auto;
 
-  background-color: var(--card-background-color);
-  border-radius: 16px;
+  background-color: var(--card-background-color);  
   animation: pulsing-glow 1.5s cubic-bezier(0.22, 0.61, 0.36, 1) infinite alternate;
+
+  @media screen and (min-width: 600px) {
+    margin: 0 20px;
+    border-radius: 16px;
+  }
+  
+  @media screen and (min-width: 768px) {
+    margin: 0 40px;
+  }  
 }
 
 .table {
